# fastapicrudtemplate

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
app/: main.py
app/routers/: hello.py
fastapicrudtemplate/: app.py
tests/: test_app.py
