[tool.poetry]
name = "fastapicrudtemplate"
version = "0.1.0"
description = ""
authors = ["Nathan Perkins <nathanjp91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
python-dotenv = "^0.21.0"
uvicorn = "^0.19.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-check = "^1.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
